-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
3
-
9223372036854775807
LNET_MAX_IOV is hard coded to 256 which works well for architectures with 4096 PAGE_SIZE. However on systems with page sizes bigger or smaller than 4K it will result in long MD count calculations, causing write errors.
- duplicates
-
LU-10775 (sec.c:2363:sptlrpc_svc_unwrap_bulk()) @@@ truncated bulk GET 1048576(2097152)
-
- Resolved
-
- is related to
-
LU-13181 kiblnd_fmr_pool_map error on the AARCH64 with 64k pages
-
- Resolved
-
-
LU-10073 lnet-selftest test_smoke: lst Error found
-
- Resolved
-
-
LU-6387 Add Power8 support to Lustre
-
- Resolved
-
-
LU-10300
Can the Lustre 2.10.x clients support 64K kernel page?
-
- Resolved
-
- is related to
-
LU-10129 map-on-demand set to 32 doesn't work on OPA
-
- Resolved
-
-
LU-7650 ko2iblnd map_on_demand can't negotitate when page sizes are different between nodes.
-
- Resolved
-